[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zoran-asim-universal-runtime"
version = "0.0.1"
description = "Zoran aSiM — Universal Runtime"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Zoran aSiM Contributors"}]
dependencies = []

[project.optional-dependencies]
all = []

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_return_any = true
ignore_missing_imports = true
